поченил винлайн и фонбет, теперь они оба работают через оркистратор. И даже находит одинаковые события в БД но правда только через SQL скрипт